--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 *.iso
 *.bz2
 freebsd
+**/.idea/*.iml
+**/.idea/workspace.xml
+**/.idea/usage.statistics.xml
+**/.idea/shelf
+**/.idea/modules.xml
+**/.idea/libraries/*.xml
